--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
+    {
+      "src": "src/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+
+  "routes": [
     {
       "source": "/(.*)",
-      "destination": "/src"
+      "dest": "/src/server.js"
     }
   ]
 }
