--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Guilherme's portfolio API",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
