--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "*.js",
-      "use": "@vercel/node"
-    }
-  ],
-
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
+      "source": "/src/(.*)",
+      "destination": "/server.js"
     }
   ]
 }
