--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/src/(.*)",
-      "destination": "/server.js"
+      "source": "./src/(.*)",
+      "destination": "./src/server.js"
     }
   ]
 }
